SERVER-32034 Pending threads shouldn't block starvation response in controller